Fix safari line wrapping

--- a/backup/avada.css
+++ b/backup/avada.css
@@ -1,3 +1,7 @@
+/* used _drt */
+
+@import '../fonts/myriad.css';
+
 /* used _drt/toplist */
 #search-filter-form-8976 * {
   border-radius: 2px;
@@ -52,7 +56,6 @@
 }
 
 .wide-portion {
-  width: 66%;
   background-color: white;
   background-color: rgba(255, 255, 255, 0.9)
 }
